# stock-podcast-rss

./: .env.example  .gitignore  README.md  processed_videos.json  pyproject.toml
.github/workflows/: podcast-stock.yml
runs/2026-04-18_5fsHnTWdcjY/: metadata.json  summary.md  transcript.txt
runs/2026-04-25_642a945a-aa16-48c9-b3ba-18449dd1cf9c/: metadata.json  summary.md  transcript.txt
runs/2026-04-29_ebd38d86-113a-4ce7-9c64-72f3fb63e5b4/: metadata.json  summary.md  transcript.txt
runs/2026-05-02_05d6fea4-c6a1-47f2-a57e-b2f4e8d82bc0/: metadata.json  summary.md  transcript.txt
runs/2026-05-06_0606f6c5-c531-454e-9714-19fa5f90e640/: metadata.json  summary.md  transcript.txt
runs/2026-05-09_d55ccb00-f3dd-4dd0-9e7f-e108f6645494/: metadata.json  summary.md  transcript.txt
runs/2026-05-13_0dd4828f-6df5-48aa-8676-caca6024987f/: metadata.json  summary.md  transcript.txt
runs/2026-05-16_33f8760f-b645-4463-bce9-18577f2db00a/: metadata.json  summary.md  transcript.txt
runs/2026-05-20_a3324cb1-b7be-4483-a739-d3ebfc534277/: metadata.json  summary.md  transcript.txt
runs/2026-05-27_181f554e-900e-4261-bc3c-1a3fe53a902a/: metadata.json  summary.md  transcript.txt
runs/2026-05-30_fd5d4766-183d-4ed9-8d68-958c50d8e730/: metadata.json  summary.md  transcript.txt
runs/2026-06-06_6d6095d8-112b-4c7f-abb3-8b670f092b2e/: metadata.json  summary.md  transcript.txt
runs/2026-06-10_f208d558-a3a0-4812-a19a-777c69ac31bf/: metadata.json  transcript.txt
runs/2026-06-13_685bc211-b7dc-478b-9463-53a160c20cdf/: metadata.json  summary.md  transcript.txt
src/podcast_stock/: main.py  (+11 more)
(+24 files in other folders)
